// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MyReviewsPage > matches snapshot on error 1`] = `
<DocumentFragment>
  <section
    class="mt-6 w-dvw text-center"
  >
    <h1
      class="text-2xl"
    >
      Something went wrong!
    </h1>
    <p
      class="text-primary"
    >
      Try to refresh
    </p>
  </section>
</DocumentFragment>
`;

exports[`MyReviewsPage > matches snapshot when loading 1`] = `
<DocumentFragment>
  <section
    class="mt-6 w-dvw text-center"
  >
    <div
      data-testid="loader"
    />
  </section>
</DocumentFragment>
`;

exports[`MyReviewsPage > matches snapshot when user has no reviews 1`] = `
<DocumentFragment>
  <section
    class="mt-6 text-center"
  >
    <h1
      class="text-2xl"
    >
      You have not added any reviews yet
    </h1>
    <a
      class="text-primary hover:underline"
      href="/"
    >
      Return to home page
    </a>
  </section>
</DocumentFragment>
`;

exports[`MyReviewsPage > matches snapshot when user reviews are loaded 1`] = `
<DocumentFragment>
  <section
    class="mx-auto mt-8 max-w-6xl px-4 pb-4"
  >
    <h1
      class="mb-6 text-center text-3xl font-bold"
    >
      My Reviews
    </h1>
    <div>
      <ul
        class="space-y-6"
      >
        <li>
          <div
            data-testid="review-card"
          >
            <span
              data-testid="review-username"
            >
              test_user
            </span>
            <span
              data-testid="review-rating"
            >
              4
            </span>
            <span
              data-testid="review-comment"
            >
              good movie!
            </span>
          </div>
        </li>
        <li>
          <div
            data-testid="review-card"
          >
            <span
              data-testid="review-username"
            >
              test_user
            </span>
            <span
              data-testid="review-rating"
            >
              5
            </span>
            <span
              data-testid="review-comment"
            >
              22
            </span>
          </div>
        </li>
        <li>
          <div
            data-testid="review-card"
          >
            <span
              data-testid="review-username"
            >
              test_user
            </span>
            <span
              data-testid="review-rating"
            >
              5
            </span>
            <span
              data-testid="review-comment"
            >
              21
            </span>
          </div>
        </li>
        <li>
          <div
            data-testid="review-card"
          >
            <span
              data-testid="review-username"
            >
              test_user
            </span>
            <span
              data-testid="review-rating"
            >
              5
            </span>
            <span
              data-testid="review-comment"
            >
              20
            </span>
          </div>
        </li>
        <li>
          <div
            data-testid="review-card"
          >
            <span
              data-testid="review-username"
            >
              test_user
            </span>
            <span
              data-testid="review-rating"
            >
              5
            </span>
            <span
              data-testid="review-comment"
            >
              19
            </span>
          </div>
        </li>
        <li>
          <div
            data-testid="review-card"
          >
            <span
              data-testid="review-username"
            >
              test_user
            </span>
            <span
              data-testid="review-rating"
            >
              5
            </span>
            <span
              data-testid="review-comment"
            >
              18
            </span>
          </div>
        </li>
        <li>
          <div
            data-testid="review-card"
          >
            <span
              data-testid="review-username"
            >
              test_user
            </span>
            <span
              data-testid="review-rating"
            >
              4
            </span>
            <span
              data-testid="review-comment"
            >
              17
            </span>
          </div>
        </li>
        <li>
          <div
            data-testid="review-card"
          >
            <span
              data-testid="review-username"
            >
              test_user
            </span>
            <span
              data-testid="review-rating"
            >
              5
            </span>
            <span
              data-testid="review-comment"
            >
              16
            </span>
          </div>
        </li>
        <li>
          <div
            data-testid="review-card"
          >
            <span
              data-testid="review-username"
            >
              test_user
            </span>
            <span
              data-testid="review-rating"
            >
              5
            </span>
            <span
              data-testid="review-comment"
            >
              15
            </span>
          </div>
        </li>
        <li>
          <div
            data-testid="review-card"
          >
            <span
              data-testid="review-username"
            >
              test_user
            </span>
            <span
              data-testid="review-rating"
            >
              5
            </span>
            <span
              data-testid="review-comment"
            >
              14
            </span>
          </div>
        </li>
        <li>
          <div
            data-testid="review-card"
          >
            <span
              data-testid="review-username"
            >
              test_user
            </span>
            <span
              data-testid="review-rating"
            >
              5
            </span>
            <span
              data-testid="review-comment"
            >
              13
            </span>
          </div>
        </li>
        <li>
          <div
            data-testid="review-card"
          >
            <span
              data-testid="review-username"
            >
              test_user
            </span>
            <span
              data-testid="review-rating"
            >
              5
            </span>
            <span
              data-testid="review-comment"
            >
              12
            </span>
          </div>
        </li>
        <li>
          <div
            data-testid="review-card"
          >
            <span
              data-testid="review-username"
            >
              test_user
            </span>
            <span
              data-testid="review-rating"
            >
              5
            </span>
            <span
              data-testid="review-comment"
            >
              11
            </span>
          </div>
        </li>
        <li>
          <div
            data-testid="review-card"
          >
            <span
              data-testid="review-username"
            >
              test_user
            </span>
            <span
              data-testid="review-rating"
            >
              5
            </span>
            <span
              data-testid="review-comment"
            >
              10
            </span>
          </div>
        </li>
        <li>
          <div
            data-testid="review-card"
          >
            <span
              data-testid="review-username"
            >
              test_user
            </span>
            <span
              data-testid="review-rating"
            >
              5
            </span>
            <span
              data-testid="review-comment"
            >
              9
            </span>
          </div>
        </li>
        <li>
          <div
            data-testid="review-card"
          >
            <span
              data-testid="review-username"
            >
              test_user
            </span>
            <span
              data-testid="review-rating"
            >
              5
            </span>
            <span
              data-testid="review-comment"
            >
              8
            </span>
          </div>
        </li>
        <li>
          <div
            data-testid="review-card"
          >
            <span
              data-testid="review-username"
            >
              test_user
            </span>
            <span
              data-testid="review-rating"
            >
              5
            </span>
            <span
              data-testid="review-comment"
            >
              7
            </span>
          </div>
        </li>
        <li>
          <div
            data-testid="review-card"
          >
            <span
              data-testid="review-username"
            >
              test_user
            </span>
            <span
              data-testid="review-rating"
            >
              5
            </span>
            <span
              data-testid="review-comment"
            >
              6
            </span>
          </div>
        </li>
        <li>
          <div
            data-testid="review-card"
          >
            <span
              data-testid="review-username"
            >
              test_user
            </span>
            <span
              data-testid="review-rating"
            >
              4
            </span>
            <span
              data-testid="review-comment"
            >
              5
            </span>
          </div>
        </li>
        <li>
          <div
            data-testid="review-card"
          >
            <span
              data-testid="review-username"
            >
              test_user
            </span>
            <span
              data-testid="review-rating"
            >
              3
            </span>
            <span
              data-testid="review-comment"
            >
              4
            </span>
          </div>
        </li>
      </ul>
      <div
        data-testid="loader"
      />
    </div>
  </section>
</DocumentFragment>
`;
